# Masquerade

./: .env.example  .gitignore  README.md  README_zh.md  linkedin-post.md  pyproject.toml
backend/: main.py
backend/agent/: graph.py  llm_client.py  memory.py  models.py  player.py  state.py  strategy.py
backend/core/: config.py  exceptions.py  logging.py
backend/engine/: __init__.py  base.py  models.py  registry.py  shared_prompts.py
backend/orchestrator/: event_bus.py  runner.py
backend/reasoning/: __init__.py  cognitive_bias.py  conflict_detector.py  extractor.py  models.py  private_overlay.py  reasoner.py  shared_graph.py  summarizer.py
backend/script/: recorder.py  schema.py
backend/tests/: test_ai_response_validation.py  test_blank_game.py  test_grg.py  test_script_pipeline.py  test_spy_game.py  verify_ac.py
backend/tts/: __init__.py  generate.py  voices.py
config/: app_config.yaml
config/games/: spy.yaml  werewolf.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
requirements/: index.md
requirements/REQ-001-project-init/: req-flow.puml  req-sequence.puml  req-usecase.puml  requirement.md  tech-architecture.puml  tech-class.puml  tech-sequence.puml  technical.md
requirements/REQ-002-spy-integration-test/: requirement.md  technical.md
scripts/: build.bat  build.sh  generate-tts.bat  generate-tts.sh  record.bat  record.py  render-video.bat  render-video.mjs  render-video.sh  run-theater.bat  run-theater.sh  run.bat  run.sh  test.bat  test.sh
(+96 files in other folders)
